<resources>
    <string name="app_name">SuperControl Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">Rom Version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="about">Welcome to SM-Rom</string>
    <string name="systemui_prefs">SystemUI Settings</string>
    <string name="phone_prefs">Phone Settings</string>
    <string name="framework_prefs">Framework Preferences</string>
    <string name="settings_prefs">App shortcuts</string>
    <string name="launcher_prefs">Launcher Settings</string>
    <string name="notification_panel_prefs">Notification Panel</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="multiple_choice_preference_button_done">Done</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="debloat_rom_menu_title">Debloat rom</string>
    <string name="select_all_label">All</string>
    <string name="LightTheme">Light Theme</string>
    <string name="DarkTheme">Dark Theme</string>
    <string name="RestoreData">Restore Data</string>
    <string name="BackupData">Backup Data</string>
    <string name="Icon1">Icon 1</string>
    <string name="Icon2">Icon 2</string>
    <string name="Shown">Shown</string>
    <string name="Hidden">Hidden</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Left">Left Side</string>
    <string name="Right">Right Side</string>
    <string name="Centered">Centered</string>
    <string name="ShowOnTop">Show on top</string>
    <string name="ShowDownBelow">Show down below</string>
    <string name="Regular">Regular</string>
    <string name="Center">Center-mirrored</string>
    <string name="dynamic_status_bar_title">Dynamic status bar</string>
    <string name="dynamic_status_bar_color">Dynamic StatusBar Color</string>
    <string name="dynamic_status_bar_title_summary">Settings to enable and adjust dynamic statusbar</string>
    <string name="dynamic_status_bar_color_title">Dynamic status bar color</string>
    <string name="dynamic_status_bar_color_summary">Automatically update background color of the status bar</string>
    <string name="dynamic_status_bar_gradient_title">Gradient</string>
    <string name="dynamic_status_bar_gradient_summary">Overlay a gradient on the status bar</string>
    <string name="dynamic_status_bar_filter_title">Darkening</string>
    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="dynamic_status_bar_filter_value">The intensity of the darkening filter</string>
    <string name="Stock">Stock</string>
    <string name="Cascade">Cascade</string>
    <string name="OuterCube">Outer Cube</string>
    <string name="InnerCube">Inner Cube</string>
    <string name="Carousal">Carousal</string>
    <string name="Plain">Plain</string>
    <string name="Conveyor">Conveyor</string>
    <string name="Card">Card</string>
    <string name="TurnScreenOff">Turn off the screen</string>
    <string name="PowerMenu">Power menu</string>
    <string name="RecentApplications">Recent applications</string>
    <string name="VolumePlus">Volume  +</string>
    <string name="VolumeMinus">Volume  -</string>
    <string name="Dialer">Dialer</string>
    <string name="GoogleSearch">Google search</string>
    <string name="SoundMode">Sound Mode: Sound / Vibration / Silent</string>
    <string name="Torchlight">Torchlight</string>
    <string name="Screenshot">Screenshot</string>
    <string name="NotificationsPanel">Notifications Panel</string>
    <string name="SwitchWiFi">Switch Wi-Fi</string>
    <string name="SwitchMobileData">Switch Mobile Data</string>
    <string name="SwitchBluetooth">Switch Bluetooth</string>
    <string name="ClearMemory">Clear Memory</string>
    <string name="ToEnd">To End</string>
    <string name="ToStart">To Start</string>
    <string name="CurrentlyRemoved">Currently removed</string>
    <string name="RestartToggleSummary">Restart toggle will be shown</string>
    <string name="RestartToggle">Restart Toggle</string>
    <string name="RecoveryToggleSummary">Reboot Recovery toggle will be shown</string>
    <string name="RecoveryToggle">Reboot Recovery Toggle</string>
    <string name="HotRebootToggleSummary">Hot Reboot toggle will be shown</string>
    <string name="HotRebootToggle">Hot Reboot Toggle</string>
    <string name="ScreencastToggleSummary">Screencast toggle will be shown</string>
    <string name="ScreencastToggle">Screencast Toggle</string>
    <string name="ScreenshotToggleSummary">Screenshot toggle will be shown</string>
    <string name="ScreenshotToggle">Screenshot Toggle</string>
    <string name="FlashlightToggleSummary">Flashlight toggle will be shown</string>
    <string name="FlashlightToggle">Flashlight Toggle</string>
    <string name="EmergencyToggleSummary">Emergency toggle will be shown</string>
    <string name="EmergencyToggle">Emergency Toggle</string>
    <string name="DataToggleSummary">Data Toggle will be shown</string>
    <string name="DataToggle">Data Toggle</string>
    <string name="AirplaneToggleSummary">Airplane toggle will be shown</string>
    <string name="AirplaneToggle">Airplane Toggle</string>
    <string name="MultiUserToggleSummary">MultiUser toggle will be shown</string>
    <string name="MultiUserToggle">MultiUser Toggle</string>
    <string name="AboutTkkg" translatable="false">Tkkg1994</string>
    <string name="AboutYellow" translatable="false">myellow</string>
    <string name="AboutAlex" translatable="false">_alex74_</string>
    <string name="AboutMisterEvo" translatable="false">MisterEvo</string>
    <string name="AboutLeeXxXo" translatable="false">LeeXxXo</string>
    <string name="AboutDeveloperSummary">Developer</string>
    <string name="AboutWebsiteSummary">Webmaster/Designer</string>
    <string name="AboutDesignerSummary">Designer</string>
    <string name="AboutSupporterSummary">Supporter</string>
    <string name="AboutRomDevelopers">Rom Developers</string>
    <string name="AboutTelegram">Telegram Links</string>
    <string name="AboutTelegramChat">Telegram Chat</string>
    <string name="AboutTelegramChannel">Telegram News Channel</string>
    <string name="AboutTelegramChatSummary">Chat with us about latest Rom stuff</string>
    <string name="AboutTelegramChannelSummary">Get latest Information about the Rom</string>
    <string name="AboutGrifoDev">GrifoDev Community</string>
    <string name="AboutGrifoDevSummary">New self-made website with forum function</string>
    <string name="AboutXDA">XDA Links to Visit</string>
    <string name="AboutXDAS7Rom" translatable="false">SuperMan-Rom SM-G930X</string>
    <string name="AboutXDAS7ERom" translatable="false">SuperMan-Rom SM-G935X</string>
    <string name="AboutXDAS7SuperKernel" translatable="false">SuperKernel SM-G930X</string>
    <string name="AboutXDAS7ESuperKernel" translatable="false">SuperKernel SM-G935X</string>
    <string name="AboutXDAS7SuperStockKernel" translatable="false">SuperStock-Kernel SM-G930X</string>
    <string name="AboutXDAS7ESuperStockKernel" translatable="false">SuperStock-Kernel SM-G935X</string>
    <string name="AboutAFH">Download Links on AFH</string>
    <string name="AboutAFHRom">Download latest SuperMan-Rom</string>
    <string name="AboutAFHSuperKernel">Download latest SuperKernel</string>
    <string name="AboutAFHSuperStockKernel">Download latest SuperStock-Kernel</string>
    <string name="AboutAFHCSC">Download latest CSC Selection</string>
</resources>