<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/reboot_menu">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="restart_power_menu"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/RestartToggleSummary"
            android:title="@string/RestartToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="reboot_recovery"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/RecoveryToggleSummary"
            android:title="@string/RecoveryToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="power_quick_reboot"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/HotRebootToggleSummary"
            android:title="@string/HotRebootToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="screencast"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/ScreencastToggleSummary"
            android:title="@string/ScreencastToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="screenshot"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/ScreenshotToggleSummary"
            android:title="@string/ScreenshotToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="flashlight_toggle"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/FlashlightToggleSummary"
            android:title="@string/FlashlightToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="power_emergency"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/EmergencyToggleSummary"
            android:title="@string/EmergencyToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="power_data"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/DataToggleSummary"
            android:title="@string/DataToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="power_airplane"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/AirplaneToggleSummary"
            android:title="@string/AirplaneToggle" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="power_multiuser"
            android:summaryOff="@string/CurrentlyRemoved"
            android:summaryOn="@string/MultiUserToggleSummary"
            android:title="@string/MultiUserToggle" />
    </PreferenceCategory>

</PreferenceScreen>
